FavoritesMenu: don't call the RefFilter when the model's node is NULL. Fixes bug #5871.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36772 a95241bf-73f2-0310-859d-f6bbb57e9c96